<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) Telicent Ltd.
    
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    
        http://www.apache.org/licenses/LICENSE-2.0
    
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>io.telicent.jena</groupId>
  <artifactId>rdf-abac</artifactId>
  <version>0.71.10-SNAPSHOT</version>

  <packaging>pom</packaging>
  <name>Telicent ABAC</name>
  <description>An Attribute Based Access Control (ABAC) implementation for Apache Jena RDF Datasets</description>
  <url>https://github.com/telicent-oss/rdf-abac</url>

  <developers>
    <developer>
      <name>Telicent Developers</name>
      <email>opensource@telicent.io</email>
      <organization>Telicent Ltd</organization>
      <organizationUrl>https://telicent.io</organizationUrl>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>

  <organization>
    <name>Telicent Ltd.</name>
    <url>https://telicent.io/</url>
  </organization>

  <issueManagement>
    <url>https://github.com/telicent-oss/rdf-abac/issues</url>
  </issueManagement>

  <scm>
    <connection>scm:git:git@github.com:telicent-oss/rdf-abac</connection>
    <developerConnection>scm:git:git@github.com:telicent-oss/rdf-abac</developerConnection>
    <url>https://github.com/telicent-oss/rdf-abac</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <!-- Build properties -->
    <build.time.xsd>${maven.build.timestamp}</build.time.xsd>
    <automatic.module.name>io.telicent.rdfabac</automatic.module.name>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
    <project.build.outputTimestamp>2024-09-20T10:50:08Z</project.build.outputTimestamp>
    <java.version>17</java.version>

    <!-- Maven Plugins -->
    <plugin.clean>3.4.0</plugin.clean>
    <plugin.compiler>3.13.0</plugin.compiler>
    <plugin.cyclonedx>2.8.2</plugin.cyclonedx>
    <plugin.dependency>3.8.0</plugin.dependency>
    <plugin.deploy>3.1.3</plugin.deploy>
    <plugin.enforcer>3.5.0</plugin.enforcer>
    <plugin.gpg>3.2.7</plugin.gpg>
    <plugin.install>3.1.3</plugin.install>
    <plugin.jar>3.4.2</plugin.jar>
    <plugin.javadoc>3.10.0</plugin.javadoc>
    <plugin.nexus>1.7.0</plugin.nexus>
    <plugin.resources>3.3.1</plugin.resources>
    <plugin.shade>3.6.0</plugin.shade>
    <plugin.site>3.20.0</plugin.site>
    <plugin.source>3.3.1</plugin.source>
    <plugin.surefire>3.5.0</plugin.surefire>

    <!-- Dependency Plugins -->
    <!-- Internal dependencies -->
    <dependency.jena>5.1.0</dependency.jena>
    <dependency.rocksdb>9.6.1</dependency.rocksdb>

    <!-- External dependencies -->
    <dependency.assert>3.26.3</dependency.assert>
    <dependency.guava>33.3.1-jre</dependency.guava>
    <dependency.jmh>1.37</dependency.jmh>
    <dependency.junit5>5.11.1</dependency.junit5>
    <dependency.junit5-platform>1.11.1</dependency.junit5-platform>
    <dependency.log4j2>2.24.1</dependency.log4j2>
    <dependency.mockito>5.14.0</dependency.mockito>
    <dependency.openhft>0.26ea0</dependency.openhft>
    <dependency.slf4j>2.0.16</dependency.slf4j>

    <!-- Temporary dependencies -->
    <dependency.protobuf>4.28.2</dependency.protobuf> <!-- CVE-2024-7254 -->
  </properties>
  
  <modules>
    <module>rdf-abac-core</module>
    <module>rdf-abac-fuseki</module>
    <module>rdf-abac-fuseki-server</module>
    <module>rdf-abac-eval</module>
  </modules>

  <dependencyManagement>
    <dependencies>
    <!-- Internal dependencies -->
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>apache-jena-libs</artifactId>
        <version>${dependency.jena}</version>
        <type>pom</type>
        <exclusions>
          <exclusion>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite-engine</artifactId>
          </exclusion>
          <!-- CVE-2024-7254 -->
          <exclusion>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-fuseki-main</artifactId>
        <version>${dependency.jena}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-cmds</artifactId>
        <version>${dependency.jena}</version>
        <exclusions>
          <exclusion>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite-engine</artifactId>
          </exclusion>
          <!-- CVE-2024-7254 -->
          <exclusion>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

    <!-- External dependencies -->

      <!-- Logging dependencies -->
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>${dependency.log4j2}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-slf4j2-impl</artifactId>
        <version>${dependency.log4j2}</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${dependency.slf4j}</version>
      </dependency>

      <!-- Test dependencies -->
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-fuseki-main</artifactId>
        <version>${dependency.jena}</version>
        <classifier>tests</classifier>
        <scope>test</scope>
        <exclusions>
          <!-- CVE-2024-7254 -->
          <exclusion>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <!-- JUnit 5 -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${dependency.junit5}</version>
        <scope>test</scope>
      </dependency>
      
      <dependency>
        <groupId>org.junit.platform</groupId>
        <artifactId>junit-platform-suite</artifactId>
        <version>${dependency.junit5-platform}</version>
        <scope>test</scope>
      </dependency>

      <!-- Temporary dependencies -->
      <!-- CVE-2024-7254 -->
      <dependency>
        <groupId>com.google.protobuf</groupId>
        <artifactId>protobuf-java</artifactId>
        <version>${dependency.protobuf}</version>
      </dependency>
      <!-- Convergence -->
      <!-- Due to jena 5.1.0 -->
      <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>1.17.1</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.17.0</version>
      </dependency>
      <dependency>
        <groupId>jakarta.servlet</groupId>
        <artifactId>jakarta.servlet-api</artifactId>
        <version>6.1.0</version>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <!-- SBOM : CycloneDX -->
      <plugin>
        <groupId>org.cyclonedx</groupId>
        <artifactId>cyclonedx-maven-plugin</artifactId>
        <version>${plugin.cyclonedx}</version>
        <executions>
          <execution>
            <id>build-sbom-cyclonedx</id>
            <phase>package</phase>
            <goals>
              <goal>makeAggregateBom</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <outputName>${project.artifactId}-${project.version}-bom</outputName>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>${plugin.clean}</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${plugin.compiler}</version>
        <configuration>
          <release>${java.version}</release>
          <compilerArgument>-proc:none</compilerArgument>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>${plugin.dependency}</version>
        <configuration>
          <overWriteReleases>false</overWriteReleases>
          <overWriteIfNewer>true</overWriteIfNewer>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>${plugin.deploy}</version>
      </plugin>

      <!-- Run the enforcer plugin automatically at compile time -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${plugin.enforcer}</version>
        <executions>
          <execution>
            <id>enforce</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration combine.self="override">
              <rules>
                <dependencyConvergence />
                <requirePluginVersions>
                  <message>Best practice is to always define plugin versions!</message>
                  <banLatest>true</banLatest>
                  <banRelease>true</banRelease>
                </requirePluginVersions>
                <requireReleaseDeps>
                  <message>No SNAPSHOT dependencies are allowed!</message>
                  <onlyWhenRelease>true</onlyWhenRelease>
                </requireReleaseDeps>
                <requireMavenVersion>
                  <version>3.8.6</version>
                </requireMavenVersion>
              </rules>
              <fail>true</fail>
              <failFast>false</failFast>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>${plugin.gpg}</version>
        <executions>
          <execution>
            <goals>
              <goal>sign</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>${plugin.install}</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${plugin.jar}</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
          </archive>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${plugin.javadoc}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <notimestamp>true</notimestamp>
          <quiet>true</quiet>
          <doclint>none</doclint>
          <version>true</version>
          <show>public</show>
          <encoding>UTF-8</encoding>
          <windowtitle>${project.name} ${project.version}</windowtitle>
          <doctitle>${project.name} ${project.version}</doctitle>
          <bottom>Licensed under the Apache License, Version 2.0</bottom>

          <!-- Settings for @apiNote, @implSpec and @implNote -->
          <tags>
            <tag>
              <name>apiNote</name>
              <placement>a</placement>
              <head>API Note:</head>
            </tag>
            <tag>
              <name>implSpec</name>
              <placement>a</placement>
              <head>Implementation Requirements:</head>
            </tag>
            <tag>
              <name>implNote</name>
              <placement>a</placement>
              <head>Implementation Note:</head>
            </tag>
          </tags>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${plugin.resources}</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>${plugin.shade}</version>
      </plugin>

      <!-- Keep the enforcer plugin happy. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>${plugin.site}</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>${plugin.source}</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${plugin.surefire}</version>
        <configuration>
          <includes>
            <include>**/TS_*.java</include>
          </includes>
            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>${plugin.nexus}</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>sonatype-oss</serverId>
          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
          <keepStagingRepositoryOnCloseRuleFailure>true</keepStagingRepositoryOnCloseRuleFailure>
          <stagingProgressTimeoutMinutes>15</stagingProgressTimeoutMinutes>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <profiles>
    <profile>
      <id>skip-problem-tests-on-windows</id>
      <activation>
        <os>
          <family>windows</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${plugin.surefire}</version>
            <configuration>
              <excludes>
                <exclude>**/TS_ABAC_BulkTests.java</exclude>
                <exclude>**/TS_LabelStoreRocksDB.java</exclude>
              </excludes>
              <argLine>-XX:+EnableDynamicAgentLoading</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <distributionManagement>
    <snapshotRepository>
      <id>sonatype-oss</id>
      <name>Sonatype OSS Snapshots</name>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>sonatype-oss</id>
      <name>Sonatype OSS</name>
      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

</project>
